Update generated documentation for version 0.9.11

--- a/overview.html
+++ b/overview.html
@@ -87,9 +87,8 @@ exceptions, whose metadata is impossible to serialize otherwise.</p></li>
 
 <p>The BCL ships with a couple of general-purpose serializer libraries but these suffer either
 from obsolescence (e.g. <a href="http://msdn.microsoft.com/en-us/library/system.runtime.serialization.formatters.binary.binaryformatter.aspx">BinaryFormatter</a>) 
-or performance (<a href="http://msdn.microsoft.com/en-us/library/system.runtime.serialization.netdatacontractserializer.aspx">NetDataContractSerializer</a>).</p>
-
-<p>Many third-party libraries have emerged attempting to address these shortcomings, 
+or performance (<a href="http://msdn.microsoft.com/en-us/library/system.runtime.serialization.netdatacontractserializer.aspx">NetDataContractSerializer</a>).
+Many third-party libraries have emerged attempting to address these shortcomings, 
 some with success. However, most of them seem to suffer when it comes to properly
 supporting serialization of .NET objects. In particular many of them:</p>
 
