Update generated documentation for version 0.9.11

--- a/overview.html
+++ b/overview.html
@@ -118,7 +118,7 @@ so we decided to build a new library from scratch.</p>
 Importantly, it was conceived as a .NET serializer, rather than an F# serializer:
 if it is a .NET object designed to be serialized, it should be serializable in FsPickler.
 In that sense, it was designed with a goal to embrace the imperfect world that is
-the .NET framework in its totality, albeit with an eye for correctness.</p>
+.NET serialization in its totality, albeit with an eye for correctness.</p>
 
 <p>At this point, we should acknowledge Anton Tayanovskyy and his great F#
 snippet <a href="http://www.fssnip.net/6u">Union-Friendly Generic Binary Serializer</a>
