--- a/overview.html
+++ b/overview.html
@@ -105,7 +105,7 @@ supporting serialization of .NET objects. In particular many of them:</p>
 <h2>FsPickler : Motivation</h2>
 
 <p>The need for a new serialization library was realized while developing for 
-<a href="http://nessos.github.io/MBrace/">MBrace</a>. MBrace is a framework for distributed
+<a href="http://www.m-brace.net/">MBrace</a>. MBrace is a framework for distributed
 computation and big data that is essentially built on the idea of a distributed
 continuation monad. To be able to distribute continuations, you need to be able to
 serialize closures. The inherently intrinsic and arbitrary nature of closures means 
