--- a/tutorial.html
+++ b/tutorial.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li><a href="http://fsharp.org">fsharp.org</a></li>
+          <li><a href="http://nessos.github.io/">nessos</a></li>
           <li><a href="http://github.com/nessos/FsPickler">github page</a></li>
         </ul>
         <h3 class="muted"><a href="/FsPickler/index.html">FsPickler</a></h3>
@@ -855,8 +855,8 @@ by exploiting its pickler infrastructure. This can be done by calling the method
         </div>
         <div class="span3">
           <a target="_blank" href="http://www.nessos.gr/">
-			<img src="/FsPickler/img/nessos.png" alt="F# Project" style="width:150px;margin:10px" /> 
-		  </a>
+      <img src="/FsPickler/img/nessos.png" alt="F# Project" style="width:150px;margin:10px" /> 
+      </a>
           <ul class="nav nav-list" id="menu" style="margin-top: 20px;">
             <li class="nav-header">FsPickler</li>
             <li><a href="/FsPickler/index.html">Home page</a></li>
