Update generated documentation for version 0.9.11

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h1>FsPickler : A fast .NET object serializer</h1>
+<h1><a name="FsPickler-A-fast-NET-object-serializer" class="anchor" href="#FsPickler-A-fast-NET-object-serializer">FsPickler : A fast .NET object serializer</a></h1>
 
 <p>FsPickler is a serialization library that facilitates the distribution of .NET objects.
 The implementation focuses on performance and completeness in supported types, including F# types.
@@ -55,7 +55,7 @@ PM> Install-Package FsPickler.CSharp</pre>
   <div class="span1"></div>
 </div>
 
-<h2>Example</h2>
+<h2><a name="Example" class="anchor" href="#Example">Example</a></h2>
 
 <p>This example demonstrates a basic serialization roundtrip using the library</p>
 
@@ -81,7 +81,7 @@ PM> Install-Package FsPickler.CSharp</pre>
 </tr>
 </table>
 
-<h2>Why FsPickler?</h2>
+<h2><a name="Why-FsPickler" class="anchor" href="#Why-FsPickler">Why FsPickler?</a></h2>
 
 <p>The principal motivation behind creating FsPickler is the need for a
 library that provides efficient, correct and complete serialization of
@@ -105,7 +105,7 @@ large-scale distributed computation that is based on the .NET framework.</p>
 <li><p>a library designed for cross-platform communication.</p></li>
 </ul>
 
-<h2>Documentation &amp; Technical Overview</h2>
+<h2><a name="Documentation-amp-Technical-Overview" class="anchor" href="#Documentation-amp-Technical-Overview">Documentation &amp; Technical Overview</a></h2>
 
 <p>A collection of tutorials, technical overviews and API references of the library.</p>
 
@@ -118,7 +118,7 @@ to other established serialization libraries.</p></li>
 and functions in the library.</p></li>
 </ul>
 
-<h2>Contributing and copyright</h2>
+<h2><a name="Contributing-and-copyright" class="anchor" href="#Contributing-and-copyright">Contributing and copyright</a></h2>
 
 <p>The project is hosted on <a href="https://github.com/nessos/FsPickler">GitHub</a> where you can <a href="https://github.com/nessos/FsPickler/issues">report issues</a>, fork 
 the project and submit pull requests.</p>
