--- a/benchmarks.html
+++ b/benchmarks.html
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="span9" id="main">
           
-<h1>Performance</h1>
+<h1><a name="Performance" class="anchor" href="#Performance">Performance</a></h1>
 
 <p>How does FsPickler compare against other .Net serialization libraries in terms of performance? 
 In this section we present a few microbenchmarks: we compared FsPickler against 
@@ -44,111 +44,111 @@ In this section we present a few microbenchmarks: we compared FsPickler against
 Code used to run the tests is available in the 
 <a href="https://github.com/nessos/FsPickler/tree/master/tests/FsPickler.PerfTests">FsPickler.PerfTests</a> project.</p>
 
-<h2>Execution Time</h2>
+<h2><a name="Execution-Time" class="anchor" href="#Execution-Time">Execution Time</a></h2>
 
 <p>The first set of tests measures execution time.
 Performance testing was done using the <a href="https://github.com/eiriktsarpalis/PerfUtil">PerfUtil</a> library. 
 Libraries not appearing in charts failed to serialize the tested objects.
 Benchmarks are indicative and in no way scientific.</p>
 
-<h3>System.Tuple</h3>
+<h3><a name="System-Tuple" class="anchor" href="#System-Tuple">System.Tuple</a></h3>
 
 <img src="benchmarks/time/tuple.png" />
 
-<h3>Array of Tuples</h3>
+<h3><a name="Array-of-Tuples" class="anchor" href="#Array-of-Tuples">Array of Tuples</a></h3>
 
 <img src="benchmarks/time/tupleArray.png" />
 
-<h3>Simple Record Class</h3>
+<h3><a name="Simple-Record-Class" class="anchor" href="#Simple-Record-Class">Simple Record Class</a></h3>
 
 <img src="benchmarks/time/class.png" />
 
-<h3>ISerializable Class</h3>
+<h3><a name="ISerializable-Class" class="anchor" href="#ISerializable-Class">ISerializable Class</a></h3>
 
 <img src="benchmarks/time/iserializable.png" />
 
-<h3>Generic Dictionary</h3>
+<h3><a name="Generic-Dictionary" class="anchor" href="#Generic-Dictionary">Generic Dictionary</a></h3>
 
 <img src="benchmarks/time/dictionary.png" />
 
-<h3>Binary Tree</h3>
+<h3><a name="Binary-Tree" class="anchor" href="#Binary-Tree">Binary Tree</a></h3>
 
 <img src="benchmarks/time/binaryTree.png" />
 
-<h3>F# list of integers</h3>
+<h3><a name="F-list-of-integers" class="anchor" href="#F-list-of-integers">F# list of integers</a></h3>
 
 <img src="benchmarks/time/list.png" />
 
-<h3>F# list of tuples</h3>
+<h3><a name="F-list-of-tuples" class="anchor" href="#F-list-of-tuples">F# list of tuples</a></h3>
 
 <img src="benchmarks/time/pairList.png" />
 
-<h3>3D float Array (200 x 200 x 200)</h3>
+<h3><a name="3D-float-Array-200-x-200-x-200" class="anchor" href="#3D-float-Array-200-x-200-x-200">3D float Array (200 x 200 x 200)</a></h3>
 
 <img src="benchmarks/time/array3D.png" />
 
-<h3>F# mutual recursive types</h3>
+<h3><a name="F-mutual-recursive-types" class="anchor" href="#F-mutual-recursive-types">F# mutual recursive types</a></h3>
 
 <img src="benchmarks/time/fsharpForest.png" />
 
-<h3>F# Quotation</h3>
+<h3><a name="F-Quotation" class="anchor" href="#F-Quotation">F# Quotation</a></h3>
 
 <img src="benchmarks/time/quotation.png" />
 
-<h3>Random object graph (n = 500, Pb = 20%)</h3>
+<h3><a name="Random-object-graph-n-500-Pb-20" class="anchor" href="#Random-object-graph-n-500-Pb-20">Random object graph (n = 500, Pb = 20%)</a></h3>
 
 <img src="benchmarks/time/random.png" />
 
-<h2>Serialization Size</h2>
+<h2><a name="Serialization-Size" class="anchor" href="#Serialization-Size">Serialization Size</a></h2>
 
 <p>The second set of tests compare the size (in bytes) of serialized objects.
 Libraries not appearing in charts failed to serialize the tested objects.</p>
 
-<h3>System.Integer</h3>
+<h3><a name="System-Integer" class="anchor" href="#System-Integer">System.Integer</a></h3>
 
 <img src="benchmarks/size/integer.png" />
 
-<h3>System.Tuple</h3>
+<h3><a name="System-Tuple-1" class="anchor" href="#System-Tuple-1">System.Tuple</a></h3>
 
 <img src="benchmarks/size/pair.png" />
 
-<h3>Integer Array (10^6 elements)</h3>
+<h3><a name="Integer-Array-10-6-elements" class="anchor" href="#Integer-Array-10-6-elements">Integer Array (10^6 elements)</a></h3>
 
 <img src="benchmarks/size/intarray.png" />
 
-<h3>Pair Array (10000 elements)</h3>
+<h3><a name="Pair-Array-10000-elements" class="anchor" href="#Pair-Array-10000-elements">Pair Array (10000 elements)</a></h3>
 
 <img src="benchmarks/size/pairarray.png" />
 
-<h3>3D float Array (100x100x100)</h3>
+<h3><a name="3D-float-Array-100x100x100" class="anchor" href="#3D-float-Array-100x100x100">3D float Array (100x100x100)</a></h3>
 
 <img src="benchmarks/size/array.png" />
 
-<h3>F# List of Integers (1000 elements)</h3>
+<h3><a name="F-List-of-Integers-1000-elements" class="anchor" href="#F-List-of-Integers-1000-elements">F# List of Integers (1000 elements)</a></h3>
 
 <img src="benchmarks/size/intlist.png" />
 
-<h3>F# List of Pairs (1000 elements)</h3>
+<h3><a name="F-List-of-Pairs-1000-elements" class="anchor" href="#F-List-of-Pairs-1000-elements">F# List of Pairs (1000 elements)</a></h3>
 
 <img src="benchmarks/size/pairlist.png" />
 
-<h3>Record</h3>
+<h3><a name="Record" class="anchor" href="#Record">Record</a></h3>
 
 <img src="benchmarks/size/record.png" />
 
-<h3>Dictionary of Records (1000 entries)</h3>
+<h3><a name="Dictionary-of-Records-1000-entries" class="anchor" href="#Dictionary-of-Records-1000-entries">Dictionary of Records (1000 entries)</a></h3>
 
 <img src="benchmarks/size/dictionary.png" />
 
-<h3>Exception (with stacktrace)</h3>
+<h3><a name="Exception-with-stacktrace" class="anchor" href="#Exception-with-stacktrace">Exception (with stacktrace)</a></h3>
 
 <img src="benchmarks/size/exception.png" />
 
-<h3>Binary tree (balanced, depth = 10)</h3>
+<h3><a name="Binary-tree-balanced-depth-10" class="anchor" href="#Binary-tree-balanced-depth-10">Binary tree (balanced, depth = 10)</a></h3>
 
 <img src="benchmarks/size/bintree.png" />
 
-<h3>F# Quotation</h3>
+<h3><a name="F-Quotation-1" class="anchor" href="#F-Quotation-1">F# Quotation</a></h3>
 
 <img src="benchmarks/size/quotation.png" />
 
