Update generated documentation for version 1.0.3

--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@ to other established serialization libraries.</p></li>
 and functions in the library.</p></li>
 </ul>
 
+<h2><a name="Who-uses-FsPickler" class="anchor" href="#Who-uses-FsPickler">Who uses FsPickler?</a></h2>
+
+<ul>
+<li><a href="http://mbrace.net/">MBrace framework</a></li>
+<li><a href="http://akkadotnet.github.io/">Akka.NET</a></li>
+</ul>
+
 <h2><a name="Contributing-and-copyright" class="anchor" href="#Contributing-and-copyright">Contributing and copyright</a></h2>
 
 <p>The project is hosted on <a href="https://github.com/nessos/FsPickler">GitHub</a> where you can <a href="https://github.com/nessos/FsPickler/issues">report issues</a>, fork 
