Update generated documentation for version 1.0.5

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ and functions in the library.</p></li>
 <h2><a name="Who-uses-FsPickler" class="anchor" href="#Who-uses-FsPickler">Who uses FsPickler?</a></h2>
 
 <ul>
-<li><a href="http://mbrace.net/">MBrace framework</a></li>
-<li><a href="http://akkadotnet.github.io/">Akka.NET</a></li>
+<li><p><a href="http://mbrace.net/">MBrace framework</a></p></li>
+<li><p><a href="http://akkadotnet.github.io/">Akka.NET</a></p></li>
 </ul>
 
 <h2><a name="Contributing-and-copyright" class="anchor" href="#Contributing-and-copyright">Contributing and copyright</a></h2>
