--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ and functions in the library.</p></li>
 <h2><a name="Who-uses-FsPickler" class="anchor" href="#Who-uses-FsPickler">Who uses FsPickler?</a></h2>
 
 <ul>
-<li><p><a href="http://mbrace.net/">MBrace framework</a></p></li>
+<li><p><a href="http://m-brace.net/">MBrace framework</a></p></li>
 <li><p><a href="http://akkadotnet.github.io/">Akka.NET</a></p></li>
 </ul>
 
