--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@ and functions in the library.</p></li>
 <ul>
 <li><p><a href="http://m-brace.net/">MBrace framework</a></p></li>
 <li><p><a href="http://akkadotnet.github.io/">Akka.NET</a></p></li>
+<li><p><a href="http://suave.io/">Suave.IO</a> - we need a simple way of serialising CLR types to
+put in cookies. After fighting .Net's JSONDataContractSerializer for a good while
+(it generated <code>[{"Key":"counter", "Value":"1"}]</code> when given a <code>Dictionary&lt;string, obj&gt;</code>!)
+we tried FsPickler. It was a stright success; it just worked.</p></li>
 </ul>
 
 <h2><a name="Contributing-and-copyright" class="anchor" href="#Contributing-and-copyright">Contributing and copyright</a></h2>
