Update generated documentation for version 1.4.0

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ large-scale distributed computation that is based on the .NET framework.</p>
 <ul>
 <li><p>a general-purpose Xml/JSON/BSON framework.</p></li>
 <li><p>a library designed for cross-platform communication.</p></li>
+<li><p>a library designed with version tolerance in mind. Avoid using for long-term persistence.</p></li>
 </ul>
 
 <h2><a name="Documentation-amp-Technical-Overview" class="anchor" href="#Documentation-amp-Technical-Overview">Documentation &amp; Technical Overview</a></h2>
