--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@ quotation serialization capabilities.</p></li>
 <li><p><a href="http://suave.io/">Suave.IO</a> - "we needed a simple way of serialising CLR types to
 put in cookies. After fighting .Net's JSONDataContractSerializer for a good while
 we tried FsPickler. It was a straight success; it just worked".</p></li>
+<li><p><a href="http://www.tachyus.com/">Tachyus</a> - "FsPickler serializes and deserializes
+objects of virtually any type quickly and reliably in a single line of
+F# code. For us this makes communications between applications across
+computing environments effortless. There are no implementation details
+to obsess about".</p></li>
 </ul>
 
 <h2><a name="Contributing-and-copyright" class="anchor" href="#Contributing-and-copyright">Contributing and copyright</a></h2>
