Update generated documentation for version 1.4.0

--- a/benchmarks.html
+++ b/benchmarks.html
@@ -49,7 +49,7 @@ Benchmarks were run on an Intel Core i7-7200K CPU @ 3.50GHz with 16GB RAM.</p>
 
 <h2><a name="Execution-Time" class="anchor" href="#Execution-Time">Execution Time</a></h2>
 
-<p>The first set of tests measures execution time.
+<p>The first set of tests measures serialization roundtrip time and GC collections.
 Performance testing was done using the <a href="https://github.com/eiriktsarpalis/PerfUtil">PerfUtil</a> library. 
 Libraries not appearing in charts failed to serialize the tested objects.
 Benchmarks are indicative and in no way scientific.</p>
